@@ -1,3 +1,13 @@
+2014-10-22  Milan Crha  <mcrha@redhat.com>
+
+        Do not build WidgetBackingStoreGtkX11 when not used.
+        <https://webkit.org/b/137972>.
+
+        Reviewed by Carlos Garcia Campos.
+
+        * platform/gtk/WidgetBackingStoreGtkX11.cpp:
+        * platform/gtk/WidgetBackingStoreGtkX11.h:
+
 2014-10-17  Jeffrey Pfau  <jpfau@apple.com>
 
         Ensure attached frame count doesn't exceed the maximum allowed frames
